test/errors/branch1.input.asm
* = $801
    lda #0
    bne nextline
    !fill 128,$ea
nextline:
    rts
